--- a/TelekomunikacijskiOperaterApp/src/main/java/hr/teleoperaterapp/view/Registracija.form
+++ b/TelekomunikacijskiOperaterApp/src/main/java/hr/teleoperaterapp/view/Registracija.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -38,12 +38,12 @@
                           <Component id="txtOib" alignment="0" pref="230" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel1" min="-2" pref="50" max="-2" attributes="0"/>
                                   <Component id="jLabel2" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                                   <Component id="Ime" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                                   <Component id="label" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                                   <Component id="jLabel6" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                                   <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel1" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
@@ -91,8 +91,8 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="txtOib" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jButton1" pref="51" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jButton1" max="32767" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
